--- a/index.html
+++ b/index.html
@@ -9,10 +9,37 @@
 </head>
 
 <body>
-    <div class="container mt-5">
-        <h1 class="text-center">Welcome to the Frontend Assessment</h1>
+    
         <!-- TODO: Implement Task 1 here -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+            <div class="container">
+                <a class="navbar-brand d-flex align-items-center gap-2" href="#">
+                    <img src="icon.jpeg" alt="SoftInn icon" height="32" class="rounded" >
+                    <span class="fw-bold">SoftInn</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto"> 
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         <!-- TODO: Implement Task 2 here -->
+         <div class="container mt-4">
+        <div class="d-flex flex-column align-items-center md-2">
+        <img src="icon.jpeg" alt="SoftInn Logo" height="48" class="mb-2 rounded">
+        <h1 class="text-center">Welcome to the Frontend Assessment</h1>
+        </div>
         <!-- TODO: Implement Task 3 here -->
     </div>
 </body>
