--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center gap-2" href="#">
-                    <img src="icon.jpeg" alt="SoftInn icon" height="32" class="rounded" >
+                    <img src="icon.jpeg" alt="SoftInn icon" height="32" class="rounded">
                     <span class="fw-bold">SoftInn</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto"> 
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About</a>
@@ -34,14 +34,29 @@
                     </ul>
                 </div>
             </div>
+        </nav>
         <!-- TODO: Implement Task 2 here -->
          <div class="container mt-4">
         <div class="d-flex flex-column align-items-center md-2">
         <img src="icon.jpeg" alt="SoftInn Logo" height="48" class="mb-2 rounded">
         <h1 class="text-center">Welcome to the Frontend Assessment</h1>
         </div>
-        <!-- TODO: Implement Task 3 here -->
+        <p class=text-center>Moving Made Simple, Memories Moved Safely</p>
+
+<section id="features" class="mb-5">
+    <div class="bg-white rounded p-4 shadow-sm">
+        <h2 class="text-center mb-4">About Us</h2>
+        <p class="lead text-center mb-0">Moving Company is dedicated to making your relocation stress-free and efficient. With years of experience, our team provides tailored solutions for families, couples, and pet owners. We pride ourselves on reliability, care, and customer satisfaction.</p>
     </div>
+</section>
+<div class="row mb-4">
+    <div class="col-md-4">
+        <div class="card p-3 mb-4 bg-white text-center">
+            <img src="feature1.jpg" alt="Feature 1" class="img-fluid mb-2">
+            <class="card--image-top mb-3 alt="family"></class>
+        </div>
+
+            <!-- TODO: Implement Task 3 here -->
 </body>
 
 </html>
