--- a/index.html
+++ b/index.html
@@ -49,12 +49,39 @@
         <p class="lead text-center mb-0">Moving Company is dedicated to making your relocation stress-free and efficient. With years of experience, our team provides tailored solutions for families, couples, and pet owners. We pride ourselves on reliability, care, and customer satisfaction.</p>
     </div>
 </section>
-<div class="row mb-4">
-    <div class="col-md-4">
-        <div class="card p-3 mb-4 bg-white text-center">
-            <img src="feature1.jpg" alt="Feature 1" class="img-fluid mb-2">
-            <class="card--image-top mb-3 alt="family"></class>
+
+      <div class="row mb-4">
+        <div class="col-md-4">
+          <div class="card p-3 mb-4 bg-white text-center">
+            <img src="https://images.unsplash.com/photo-1645526817591-951a151a4ac1?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8ZmFtaWx5JTIwbW92aW5nfGVufDB8fDB8fHww" class="card-img-top mb-3" alt="Family">
+            <div class="card-body">
+              <h5 class="card-title">Family Moving</h5>
+              <p class="card-text">We help families move with ease and comfort.</p>
+              <a href="#" class="btn btn-success mt-2">Learn More</a>
+            </div>
+          </div>
         </div>
+        <div class="col-md-4">
+          <div class="card p-3 mb-4 bg-white text-center">
+            <img src="https://plus.unsplash.com/premium_photo-1680300960757-376ffe4a18ce?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8Y291cGxlcyUyMG1vdmluZ3xlbnwwfHwwfHx8MA%3D%3D" class="card-img-top mb-3" alt="Couple">
+            <div class="card-body">
+              <h5 class="card-title">Couple Moving</h5>
+              <p class="card-text">Perfect solutions for couples relocating together.</p>
+              <a href="#" class="btn btn-success mt-2">Learn More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card p-3 mb-4 bg-white text-center">
+            <img src="https://plus.unsplash.com/premium_photo-1678760859855-fc07d52b051a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8cGV0JTIwbW92aW5nfGVufDB8fDB8fHww" class="card-img-top mb-3" alt="Dog">
+            <div class="card-body">
+              <h5 class="card-title">Pet Friendly</h5>
+              <p class="card-text">We care for your pets during the move.</p>
+              <a href="#" class="btn btn-success mt-2">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
 
             <!-- TODO: Implement Task 3 here -->
 </body>
