--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Assessment</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .feature-icon {
+            width: 4rem;
+            height: 4rem;
+            border-radius: 0.75em;
+        }
+    </style>
 </head>
 
 <body>
-    
+    <!-- //navbar    -->
         <!-- TODO: Implement Task 1 here -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
             <div class="container">
@@ -42,7 +49,7 @@
         <h1 class="text-center">Welcome to the Frontend Assessment</h1>
         </div>
         <p class=text-center>Moving Made Simple, Memories Moved Safely</p>
-
+<!-- //features section -->
 <section id="features" class="mb-5">
     <div class="bg-white rounded p-4 shadow-sm">
         <h2 class="text-center mb-4">About Us</h2>
@@ -83,7 +90,18 @@
         </div>
       </div>
 
+
             <!-- TODO: Implement Task 3 here -->
+
+
+
+<!-- //footer -->
+<footer class="bg-light text-center text-lg-start mt-4">
+                <div class="text-center p-3">
+                    © 2024 SoftInn. All rights reserved.
+                </div>
+            </footer>
+    </div>
 </body>
 
 </html>
