add contact section

--- a/index.html
+++ b/index.html
@@ -93,8 +93,27 @@
 
             <!-- TODO: Implement Task 3 here -->
 
-
-
+<!-- //contact section -->
+ <section id="contact" class="mb-5">
+<div class="bg-light rounded p-4 shadow-sm">
+    <h2 class="text-center mb-3">Contact Us</h2>
+    <p class="text-center mb-4">If you have any inquiries about the service or need assistance, feel free to reach out to us!</p>
+</div>
+<form class="p-3 bg-white">
+    <div class="mb-3">
+        <label for="name" class="form-label">Name</label>
+        <input type="text" class="form-control" id="name" placeholder=" Name">
+    </div>
+    <div class="mb-3">  
+        <label for="email" class="form-label">Email</label>
+        <input type="email" class="form-control" id="email" placeholder=" Email">
+    </div>
+    <div class="mb-3">  
+        <label for="message" class="form-label">Message</label>
+        <textarea class="form-control" id="message" rows="4" placeholder=" Message"></textarea>
+    </div>
+    <button type="button" class="btn btn-success w-100 mt-2" >Submit</button>
+</form>
 <!-- //footer -->
 <footer class="bg-light text-center text-lg-start mt-4">
                 <div class="text-center p-3">
