--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                 </div>
             </div>
         </nav>
+
         <!-- TODO: Implement Task 2 here -->
+        <!-- hero section -->
          <div class="container mt-4">
         <div class="d-flex flex-column align-items-center md-2">
         <img src="icon.jpeg" alt="SoftInn Logo" height="48" class="mb-2 rounded">
@@ -112,8 +114,12 @@
         <label for="message" class="form-label">Message</label>
         <textarea class="form-control" id="message" rows="4" placeholder=" Message"></textarea>
     </div>
-    <button type="button" class="btn btn-success w-100 mt-2" >Submit</button>
+    <button type="button" class="btn btn-success w-100 mt-2" data-bs-toggle="modal" data-bs-target="#contactModal"  >Submit</button>
 </form>
+</section>
+
+<!-- Modal -->
+ 
 <!-- //footer -->
 <footer class="bg-light text-center text-lg-start mt-4">
                 <div class="text-center p-3">
@@ -121,6 +127,15 @@
                 </div>
             </footer>
     </div>
-</body>
 
+<!-- //FUNCTIONALITY FOR THE MODAL -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    document.querySelector('button[data-bs-target="#contactModal"]').addEventListener('click', function() {
+        alert('Thank you for reaching out! We will get back to you soon.');
+    
+
+    });
+</script>
+</body>
 </html>
