--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <!-- //navbar    -->
         <!-- TODO: Implement Task 1 here -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center gap-2" href="#">
                     <img src="icon.jpeg" alt="SoftInn icon" height="32" class="rounded">
@@ -53,7 +53,7 @@
         <p class=text-center>Moving Made Simple, Memories Moved Safely</p>
 <!-- //features section -->
 <section id="features" class="mb-5">
-    <div class="bg-white rounded p-4 shadow-sm">
+    <div class="bg-light rounded p-4 shadow-sm">
         <h2 class="text-center mb-4">About Us</h2>
         <p class="lead text-center mb-0">Moving Company is dedicated to making your relocation stress-free and efficient. With years of experience, our team provides tailored solutions for families, couples, and pet owners. We pride ourselves on reliability, care, and customer satisfaction.</p>
     </div>
